# py-rust-enconde-varint

./: .gitignore  Cargo.toml  README.md  py_rust_encode_varint.pyi  pyproject.toml
.github/workflows/: publish.yaml
src/: lib.rs
tests/: test_merge.py  test_posting_list.py  test_round_trip.py  test_sorting.py  test_varint.py
