[project]
name = "py_rust_encode_varint"
version = "0.3.11"
description = "Encode varint using Protocol Buffers format (same as Python implementation)"

# Include a long description
requires-python = ">=3.14"

[tool.maturin]
features = ["pyo3/extension-module"]

[build-system]
requires = ["maturin>=0.12"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "maturin>=1.10.1",
]


# Other fields like authors, dependencies, etc.
